crates/reze_compiler/tests/snapshots/snapshots__repeat_eager_rows.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { Repeat } from \"reze-js\";\nconst a = <Repeat count={2}>{() => <i ref={r} />}</Repeat>;\nconst b = <Repeat count={2}>{() => <b onClick={handler()} />}</Repeat>;\nconst c = <Repeat count={2}>{() => { const x = read(); return <b>{x}</b>; }}</Repeat>;\nconst d = <Repeat count={2}>{() => <b {...rest()} />}</Repeat>;\nconst e = <Repeat count={2}>{function () { return <b />; }}</Repeat>;\nconst f = <Repeat count={2}>{(index = 1) => <b />}</Repeat>;\nfunction shadowed(Array) {\n  return <Repeat count={2}>{() => <i />}</Repeat>;\n}"
---
import { Repeat } from "reze-js";
import { repeat as _$repeat, template as _$template, use as _$use, addEventListener as _$addEventListener, insert as _$insert, spread as _$spread, mergeProps as _$mergeProps, delegateEvents as _$delegateEvents } from "reze-js";
const a = _$repeat(() => 2, () => {
  var _el$ = _$template("<i>");
  typeof r === "function" ? _$use(r, _el$) : r = _el$;
  return _el$;
});
const b = _$repeat(() => 2, () => {
  var _el$2 = _$template("<b>");
  _$addEventListener(_el$2, "click", handler(), true);
  return _el$2;
});
const c = _$repeat(() => 2, () => { const x = read(); {
  var _el$3 = _$template("<b>");
  _$insert(_el$3, x);
  return _el$3;
} });
const d = _$repeat(() => 2, () => {
  var _el$4 = _$template("<b>");
  _$spread(_el$4, _$mergeProps(() => (rest())), false, false);
  return _el$4;
});
const e = _$repeat(() => 2, function () { return _$template("<b>"); });
const f = _$repeat(() => 2, (index = 1) => _$template("<b>"));
function shadowed(Array) {
  return _$repeat(() => 2, () => _$template("<i>"));
}
_$delegateEvents(["click"]);
