crates/reze_compiler/tests/snapshots/snapshots__select_and_textarea.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <select value={v()}>{options()}</select>;\nconst b = <textarea value=\"hi\" />;"
---
import { template as _$template, insert as _$insert, renderEffect as _$renderEffect } from "reze-js";
const a = (() => {
  var _el$ = _$template("<select>");
  _$insert(_el$, options);
  _$renderEffect(() => _el$.value = v());
  return _el$;
})();
const b = (() => {
  var _el$2 = _$template("<textarea>");
  _el$2.value = "hi";
  return _el$2;
})();
