crates/reze_compiler/tests/snapshots/snapshots__shared_source_binds.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { signal } from \"reze-js\";\nconst [n, setN] = signal(0);\nconst [t, setT] = signal(\"\");\nexport const a = <p title={n()} data-y={n() - 1} onClick={() => { setN(n() + 1); setT(\"x\"); }}>{n() * 2} {t()}</p>;"
---
import { signal } from "reze-js";
import { template as _$template, append as _$append, renderEffect as _$renderEffect, setAttribute as _$setAttribute, delegateEvents as _$delegateEvents } from "reze-js";
const [n, setN] = signal(0);
const [t, setT] = signal("");
export const a = (() => {
  var _el$ = _$template("<p> "),
    _el$2 = _el$.firstChild,
    _p$,
    _p$2,
    _p$3;
  _el$.$$click = () => { setN(n() + 1); setT("x"); };
  _$append(_el$, t);
  _$renderEffect(() => {
    var _v$ = n(),
      _v$2 = n() - 1,
      _v$3 = "" + (n() * 2) + " ";
    _v$ !== _p$ && (_$setAttribute(_el$, "title", _p$ = _v$));
    _v$2 !== _p$2 && (_$setAttribute(_el$, "data-y", _p$2 = _v$2));
    _v$3 !== _p$3 && (_el$2.data = _p$3 = _v$3);
  });
  return _el$;
})();
_$delegateEvents(["click"]);
