crates/reze_compiler/tests/snapshots/snapshots__show_boolean_when.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "import { Show } from \"reze-js\";\nconst a = <div><Show when={!x() || (k() in o && Boolean(v()))}><b /></Show></div>;\nconst b = <div><Show when={{} instanceof X}><i /></Show></div>;\nconst c = <div><Show when={a() ?? b() === 1}><u /></Show></div>;\nconst d = <p class={{ on: s() ? t() > 1 : !u() }} />;"
---
import { Show } from "reze-js";
import { template as _$template, insert as _$insert, computed as _$computed, renderEffect as _$renderEffect, toggleClass as _$toggleClass } from "reze-js";
const a = (() => {
  var _el$ = _$template("<div>");
  var _c$ = _$computed(() => !x() || (k() in o && Boolean(v())));
  _$insert(_el$, () => _c$() && _$template("<b>"));
  return _el$;
})();
const b = (() => {
  var _el$2 = _$template("<div>");
  var _c$2 = _$computed(() => !!({} instanceof X));
  _$insert(_el$2, () => _c$2() && _$template("<i>"));
  return _el$2;
})();
const c = (() => {
  var _el$3 = _$template("<div>");
  var _c$3 = _$computed(() => !!(a() ?? b() === 1));
  _$insert(_el$3, () => _c$3() && _$template("<u>"));
  return _el$3;
})();
const d = (() => {
  var _el$4 = _$template("<p>");
  _$renderEffect(_p$ => _$toggleClass(_el$4, "on", s() ? t() > 1 : !u(), _p$));
  return _el$4;
})();
