crates/reze_compiler/tests/snapshots/snapshots__spread_children.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <div {...attrs()} />;\nconst b = <p {...rest}><b /></p>;"
---
import { template as _$template, spread as _$spread, mergeProps as _$mergeProps } from "reze-js";
const a = (() => {
  var _el$ = _$template("<div>");
  _$spread(_el$, _$mergeProps(() => (attrs())), false, false);
  return _el$;
})();
const b = (() => {
  var _el$2 = _$template("<p><b>");
  _$spread(_el$2, rest, false, true);
  return _el$2;
})();
