crates/reze_compiler/tests/snapshots/snapshots__spread_shadowed.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <Card {...{ a: 1 }} a={value} />;"
---
import { createComponent as _$createComponent, mergeProps as _$mergeProps } from "reze-js";
const a = _$createComponent(Card, _$mergeProps({ a: 1 }, { a: value }));
