crates/reze_compiler/tests/snapshots/snapshots__static_class_and_style.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <i class={[\"a\", { b: true, c: false }]} style={{ color: \"red\" }} />;"
---
import { template as _$template } from "reze-js";
const a = _$template("<i class=\"a b\" style=color:red>");
